<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_0" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Coffee_Ratio" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ocl-Ge-qAM">
                                <rect key="frame" x="16" y="484" width="73" height="64"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="start_button"/>
                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="24"/>
                                <state key="normal" title="Start">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="start:" destination="BYZ-38-t0r" eventType="touchUpInside" id="AdK-A4-lzi"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nJB-7c-GFy">
                                <rect key="frame" x="231" y="484" width="73" height="64"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="end_button"/>
                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="24"/>
                                <state key="normal" title="End">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="stop:" destination="BYZ-38-t0r" eventType="touchUpInside" id="i3c-Z5-LoU"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FpN-tT-0Gf">
                                <rect key="frame" x="124" y="484" width="73" height="64"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear_button"/>
                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="24"/>
                                <state key="normal" title="Clear">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="clear" destination="BYZ-38-t0r" eventType="touchUpInside" id="VdG-o5-pnk"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" restorationIdentifier="waterInGrams" text="00:00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="s5A-cP-KRY">
                                <rect key="frame" x="16" y="406" width="288" height="70"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="timer_label"/>
                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="63"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Q9D-uW-0r3">
                                <rect key="frame" x="16" y="238" width="288" height="86"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="water_grams_label"/>
                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="95"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" textAlignment="center" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="0Pi-SW-gnB">
                                <rect key="frame" x="92" y="156" width="136" height="38"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="coffee_total_input"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                <connections>
                                    <action selector="editingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="Nqv-eF-wgN"/>
                                </connections>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5FD-Tl-Mxw">
                                <rect key="frame" x="92" y="202" width="56" height="21"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="coffee_ratio_input"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="18.5" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0uM-di-9rN">
                                <rect key="frame" x="172" y="202" width="56" height="21"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="water_ratio_input"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                <connections>
                                    <action selector="editingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="nkC-Ob-Bic"/>
                                </connections>
                            </textField>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="led-Ie-w3n">
                                <rect key="frame" x="16" y="127" width="67" height="103"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                            </view>
                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4mE-jr-c1F">
                                <rect key="frame" x="236" y="127" width="68" height="103"/>
                                <autoresizingMask key="autoresizingMask" flexibleMinX="YES" widthSizable="YES"/>
                                <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                            </view>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="coffee" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hXg-ZT-Tjg">
                                <rect key="frame" x="16" y="127" width="288" height="21"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="title_label"/>
                                <fontDescription key="fontDescription" type="system" weight="ultraLight" pointSize="17"/>
                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="bcL-os-WMX">
                                <rect key="frame" x="100" y="42" width="121" height="29"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                                <segments>
                                    <segment title="Grams"/>
                                    <segment title="TBSP"/>
                                </segments>
                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
                                    <action selector="segmentedControlChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="d4V-qx-J2x"/>
                                </connections>
                            </segmentedControl>
                        </subviews>
                        <color key="backgroundColor" red="0.16011145700000001" green="0.1615346597" blue="0.1913308722" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                    </view>
                    <connections>
                        <outlet property="coffeeRatioTF" destination="5FD-Tl-Mxw" id="heb-MA-hj4"/>
                        <outlet property="coffeeTF" destination="0Pi-SW-gnB" id="AWY-yY-KeX"/>
                        <outlet property="displayTimeLabel" destination="s5A-cP-KRY" id="ddt-1S-kEM"/>
                        <outlet property="waterGramsLabel" destination="Q9D-uW-0r3" id="5gi-Ke-rFU"/>
                        <outlet property="waterRatioTF" destination="0uM-di-9rN" id="zbi-1F-7ft"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="425.625" y="302.11267605633805"/>
        </scene>
    </scenes>
</document>
